# cuda-mace

./: .gitignore  LICENSE  README.md  SPICE_sm_inv_neut_E0_swa.model  nsight_report.nsys-rep  pyproject.toml  setup.py  tmp
.github/workflows/: main.unused  main.yaml  main.yml
cuda_mace/: .gitignore  CMakeLists.txt
cuda_mace.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cuda_mace/cmake/: MakeIncludeable.cmake  PrependHeadersToSource.cmake
cuda_mace/cuda/include/: cubic_spline_impl.cuh  cuda_utils.cuh  cuda_utils.hpp  invariant_message_passing_impl.cuh  linear_impl.cuh  linear_wmma_impl.cuh  spherical_harmonics_impl.cuh  symmetric_contraction_impl.cuh  torch_utils.cuh
cuda_mace/cuda/src/: cubic_spline_impl.cu  cubic_spline_impl2.cu  cuda_utils.cu  invariant_message_passing_impl.cu  linear_impl.cu  linear_wmma_impl.cu  spherical_harmonics_impl.cu  spherical_harmonics_impl_old.cu  symmetric_contraction_impl.cu  torch_utils.cu
cuda_mace/cuda_old/: embedding_tools.cu  instruction.py  irreps.py  linear_wmma.cu  matmul.cu
cuda_mace/cuda_old/include/: embedding_tools.h
cuda_mace/include/: cubic_spline.h  linear.h  spherical_harmonics.h  symmetric_contraction.h  utils.h
cuda_mace/jit_wrappers/include/: cubic_spline_wrapper.hpp  cuda_cache.hpp  dynamic_cuda.hpp  invariant_message_passing_wrapper.hpp  linear_wrapper.hpp  spherical_harmonics_wrapper.hpp  symmetric_contraction_wrapper.hpp
cuda_mace/jit_wrappers/src/: cubic_spline_wrapper.cpp  invariant_message_passing_wrapper.cpp  linear_wrapper.cpp  spherical_harmonics_wrapper.cpp  symmetric_contraction_wrapper.cpp
cuda_mace/models/: InvariantMACE.py  ScaleShiftMACE.py  __init__.py  test.py
cuda_mace/ops/: __init__.py  cubic_spline.py  invariant_message_passing.py  linear.py  symmetric_contraction.py
cuda_mace/src/: cubic_spline.cpp  invariant_message_passing.cpp  linear.cpp  spherical_harmonics.cpp  symmetric_contraction.cpp
examples/: ElementalLinearTest.py  InvariantElementalLinear.py  InvariantLinear.py  InvariantMessagePassing.py  InvariantMessagePassingCUDA.py  Linear.py  SymmContractionTorchScript.py  SymmetricContraction.py  SymmetricContractionCUDA.py  TensorProductCUDA.py  TensorProductReference.py  WeightedTensorProductReference.py  index_test.py  linearCUDA.py  linear_ref.py  matmul copy.py  matmul.py  model_surgery.py  multiGPUSymmetricContractionCUDA.py  report1.nsys-rep  surgery.py  test_cg.py
mace_ops/: CMakeLists.txt
mace_ops.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mace_ops/cuda/: __init__.py  equivariant_message_passing.cu  equivariant_outer_product.cu  generators.py  instruction.py  invariant_message_passing.cu  invariant_message_passing_new.cu  invariant_message_passing_old.cu  invariant_outer_product.cu  linear.cu  linear_wmma.cu  matmul.cu  symmetric_contraction_kernels.cu  tensor_product_kernels.cu
mace_ops/cuda/include/: cubic_spline_impl.cuh  cuda_utils.cuh  invariant_message_passing_impl.cuh  linear_wmma_impl.cuh  spherical_harmonics_impl.cuh  symmetric_contraction_impl.cuh  torch_utils.cuh
mace_ops/cuda/src/: cubic_spline_impl.cu  cuda_utils.cu  invariant_message_passing_impl.cu  linear_wmma_impl.cu  spherical_harmonics_impl.cu  symmetric_contraction_impl.cu  torch_utils.cu
mace_ops/cuda_old/: embedding_tools.cu  instruction.py  invariant_message_passing_old.cu  linear.cu  old.py  symmetric_contraction_kernels.cu
mace_ops/cuda_old/include/: cuda_utils.h
mace_ops/include/: cubic_spline.h  invariant_message_passing.h
mace_ops/mace_ops.egg-info/: PKG-INFO  SOURCES.txt
mace_ops/model_conversion/: test.py
mace_ops/ops/: __init__.py  invariant_message_passing.py  linear.py  symmetric_contraction.py
mace_ops/src/: cubic_spline.cpp  invariant_message_passing.cpp  linear_wmma.cpp  spherical_harmonics.cpp
models/: convert_model.py  test.py
other/: profile_matmul.py
scripts/manylinux2014_x86_64/: Dockerfile
tensor_contraction/: .project  setup.py
tensor_contraction/_tests/: .gitignore  forward_test.py  numba_tests.py  test_contraction.py  test_sparse_accumulation.py
tensor_contraction/cuda/: symmetric_contraction_kernels.cu  tensor_contraction.cpp  tensor_contraction2_old2.cpp  tensor_contraction_kernels.cu  tensor_contraction_old1.cpp  tensor_product_kernel.cu
tensor_contraction/data/: W_1.npy  W_2.npy  W_3.npy  X.npy  Y.npy
tensor_contraction/tensor_contraction.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tensor_contraction/tensor_contraction/_tests/: TensorProduct.py  cuda_tests.py  numba_cuda.py  numba_funcs.py  numba_tests.py  parallel_contraction.py  test_e3nn_accumulation.py  test_sparse_accumulation.py
tensor_contraction/tensor_contraction/cuda/: TC32x32Block.cuf  TCGemm.cu  main  sparse_stuff.cpp  sparse_stuff_kernel.cu  tensor_contraction.cpp  tensor_contraction_kernels.cu  tensor_contraction_kernels2_old2.cu  tensor_contraction_kernels_old1.cu  tensor_product_kernel.cu  tests.cpp  tests_kernel.cu
tensor_contraction/tensor_contraction/test/: StructU_nvals.pt  snippet.py  sparse_tests.py  sparsify.py  test.py  test_load_2.py  test_multiwarp_tc.py  test_wmma.py
tensor_contraction/tests/: compare_einsum.py
tensor_contraction/tests/other/: a.out  component_test.py  mace_contraction.py  mace_test.py  new_mace_contraction.py  sparse_tests.py  sparsify.py  sympy_test.py  t  test.py  test_components.py  test_components_copy.py  test_contraction.py  test_multiwarp_tc.py
tensor_contraction/tests/tensor_products/: TensorProductCuda.py  TensorProductReference.py
tests/: 1-propanamine.xyz  InvariantMessagePassing.py  MACE.py  MACE_nsys_profile.py  MACE_playground.py  MACE_scripted.py  conv_vect.py  cuda_MACE_timing.py  edge_tp.py  index_test.py  invariant_message_passing.py  invariant_tp.py  linear.py  message_passing_tp.py  reference.py  small_mol.xyz  sparseU.py  sparse_tests.py  sparsified_U_L=1.pt  sparsified_U_L=2.pt  spherical_harmonics.py  symmetric_contraction.py  test_utils.py  tf_tests.py  tp.py  tp_tests.py  weighted_tp.py
tools/: model_surgery.py
